fixes major typo to wicks theorem exercises

--- a/2020/exercises/tex/3_Wicks_Theorem_exercises.tex
+++ b/2020/exercises/tex/3_Wicks_Theorem_exercises.tex
@@ -64,7 +64,7 @@ n[a_p a_q a_r\dg a_s a_t\dg a_u\dg]  = \delta_{pr}\delta_{qt} \delta_{su}\]
  This is an example of Slater's second rule
  
  \item For $\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} }$ which differ by two spin-orbitals such that $p_1 \neq q_1, p_2 \neq q_2, p_3 = q_3 \cd p_N = q_N$, show that
-\[\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} } = h_{p_1 q_1}  +  \braket{p_1 p_2 || q_1 p_2}  \]
+\[\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} } =  \braket{p_1 p_2 || q_1 p_2}  \]
    This is an example of Slater's third rule
  \item Apply Slater's first rule to explicit write out (i.e. without summation symbols) all terms for  \[\braket{\Phi_{pqr} | H| \Phi_{stu}} \]
  (Hint: There should be six terms total)
