changes to ph notes

--- a/2020/lecture_notes/tex/3_PH_a.tex
+++ b/2020/lecture_notes/tex/3_PH_a.tex
@@ -291,6 +291,7 @@ R_1 & R_2 &\cd & R_\alpha& R_{\alpha+1} & \cd & R_m  \\
 \end{pmatrix}
 \] \\
 Notice that we use a capital N instead of a small n, and we use $y$ for denoting a general quasiparticle operator $b_p$ or $b_p\dg$. 
+We refer to normal ordering with respect to the Fermi vacuum as $\Phi$-normal ordering. 
 \\ \\
 For example,
 \[N[b_p\dg b_q b_r\dg] = -b_p\dg b_r\dg b_q = b_r\dg b_p\dg b_q\]
@@ -298,7 +299,7 @@ For example,
 As with the normal product in the true vacuum, 
 \[N[\varnothing] = 1\]
 \\ \\
-Properties of Normal products in the Fermi vacuum: 
+Properties of $\Phi$-normal products: 
 \begin{enumerate}
 \item A normal product of a normal ordered string of operators is just that string of operators:
 \[N[b_{1}\dg \cd b_{\mu}\dg b_{\mu+1} \cd b_{m} ] = b_{1}\dg \cd b_{\mu}\dg b_{{\mu+1}} \cd b_{m}  \]
@@ -343,7 +344,7 @@ b_p\dg b_q\dg = b_p\dg b_q\dg  - N[b_p\dg b_q\dg] = b_p\dg b_q\dg  - b_p\dg b_q\
 $$
 \end{enumerate}
 
-\subsection{Normal products with contractions wrt Fermi vacuum}
+\subsection{$\Phi$-normal products with contractions}
 A normal product with contractions in the Fermi vacuum,
 \[ 
 \ctr{N[y_1 \cd }{x}{{}_{\nu_1} \cd y_{\nu_\lambda} \cd }{x}
