typo to PH notes

--- a/2020/lecture_notes/tex/3_PH_a.tex
+++ b/2020/lecture_notes/tex/3_PH_a.tex
@@ -347,18 +347,18 @@ $$
 \subsection{$\Phi$-normal products with contractions}
 A normal product with contractions in the Fermi vacuum,
 \[ 
-\ctr{N[y_1 \cd }{x}{{}_{\nu_1} \cd y_{\nu_\lambda} \cd }{x}
-\ctr[2ex]{N[y_1 \cd y_{\nu_1} \cd}{ x}{{}_{\nu_\lambda} \cd y_{\mu_1} \cd }{x} 
+\fctr{N[y_1 \cd }{x}{{}_{\nu_1} \cd y_{\nu_\lambda} \cd }{x}
+\fctr[2ex]{N[y_1 \cd y_{\nu_1} \cd}{ x}{{}_{\nu_\lambda} \cd y_{\mu_1} \cd }{x} 
 N[y_1 \cd y_{\nu_1} \cd y_{\nu_\lambda} \cd y_{\mu_1} \cd y_{\mu_\lambda} \cd y_m] 
 \] 
 can be rewritten as: 
 \[ 
-\ctr{N[y_1 \cd }{x}{{}_{\nu_1} \cd y_{\nu_\lambda} \cd }{x}
-\ctr[2ex]{N[y_1 \cd y_{\nu_1} \cd}{ x}{{}_{\nu_\lambda} \cd y_{\mu_1} \cd }{x} 
+\fctr{N[y_1 \cd }{x}{{}_{\nu_1} \cd y_{\nu_\lambda} \cd }{x}
+\fctr[2ex]{N[y_1 \cd y_{\nu_1} \cd}{ x}{{}_{\nu_\lambda} \cd y_{\mu_1} \cd }{x} 
 N[y_1 \cd y_{\nu_1} \cd y_{\nu_\lambda} \cd y_{\mu_1} \cd y_{\mu_\lambda} \cd y_m] 
 = 
-\ctr{(-1)^R}{x}{{}_{\nu_1} }{x}
-\ctr{(-1)^R y_{\nu_1}y_{\mu_1} \cd}{x}{{}_{\nu_\lambda} }{x}
+\fctr{(-1)^R}{x}{{}_{\nu_1} }{x}
+\fctr{(-1)^R y_{\nu_1}y_{\mu_1} \cd}{x}{{}_{\nu_\lambda} }{x}
 (-1)^R y_{\nu_1}y_{\mu_1} \cd y_{\nu_\lambda} y_{\mu_\lambda} N[y_{k_1} \cd y_{k_\rho}]
 \] 
 where 
