--- a/2020/lecture_notes/tex/3_PH_a.tex
+++ b/2020/lecture_notes/tex/3_PH_a.tex
@@ -392,7 +392,7 @@ N[\fctr{}{b}{{}_p b_q}{b}
 
 The statement of Wick's theorem remains the same for quasiparticle operators in the Fermi Vacuum: 
 
-\[y_1 \cd y_m = N[y_1\cd y_m] + \sum_{a.c} N\ol{[y_1 \cd y_m]} \]
+\[y_1 \cd y_m = N[y_1\cd y_m] + \sum_{a.c.} N\ol{[y_1 \cd y_m]} \]
 Wick's theorem in the Fermi vacuum with $b_p$ and $b_p\dg$ 
 can be proved in the same way that we proved Wick's theorem in the true vacuum with 
 $a_p$ and $a_p\dg$.
