clarification to exercises

--- a/2020/exercises/tex/3_Wicks_Theorem_exercises.tex
+++ b/2020/exercises/tex/3_Wicks_Theorem_exercises.tex
@@ -60,7 +60,7 @@ n[a_p a_q a_r\dg a_s a_t\dg a_u\dg]  = \delta_{pr}\delta_{qt} \delta_{su}\]
  
  \item For $\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} }$ which differ by one spin-orbital such that $p_1 \neq q_1, p_2 = q_2 \cd p_N = q_N$, show that 
  
- \[\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} } = h_{p_1 q_1}  + \sum_k \braket{p_1 p_k || q_1 p_k}  \]
+ \[\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} } = h_{p_1 q_1}  + \sum_{k=2}^N \braket{p_1 p_k || q_1 p_k}  \]
  This is an example of Slater's second rule
  
  \item For $\braket{\Phi_{p_1 p_2 \cd p_N} | H | \Phi_{q_1 q_2 \cd q_N} }$ which differ by two spin-orbitals such that $p_1 \neq q_1, p_2 \neq q_2, p_3 = q_3 \cd p_N = q_N$, show that
