--- a/2020/programming/5_FCI_Part1.ipynb
+++ b/2020/programming/5_FCI_Part1.ipynb
@@ -6,16 +6,11 @@
    "source": [
     "# Full CI - Part 1\n",
     "\n",
-    "You will not turn anything in for part 1, however it should be completed before next Friday.\n",
+    "**You will not turn anything in for part 1, however it should be completed before next Friday.**\n",
     "\n",
     "The goal of this part of full CI is to generate all possible determinants and determine the phase of \n",
     "\n",
-    "These determinants will be formed using strings and stored internally as bits.\n",
-    "\n",
-    "1. Bitwise operators\n",
-    "2. Implement the `Determinant` class\n",
-    "3. Generate a reference determinant\n",
-    "4. Generate a list of all possible determinants"
+    "These determinants will be formed using strings but stored internally as bits.\n"
    ]
   },
   {
@@ -24,14 +19,14 @@
    "source": [
     "## Bitwise Operators\n",
     "\n",
-    "At the heart of bit manipulation are the bitwise operators & (and), | (or), ~ (not) and ^ (xor).  The first three you should already be familiar with in their boolean forms (&&, || and !). As a reminder, here are the truth tables:\n",
+    "At the heart of bit manipulation are the bitwise operators & (and), | (or), ~ (not) and ^ (xor).  The first three you should already be familiar with in their boolean forms (&& `and`, || `or` and ! `not`). As a reminder, here are the truth tables:\n",
     "\n",
-    "| A | B | !A | A && B | A \\|\\| B | A^B |\n",
-    "|---|---|----|--------|----------|-----|\n",
-    "| 0 | 0 | 1  | 0      | 0        | 0   |\n",
-    "| 0 | 1 | 1  | 0      | 1        | 1   |\n",
-    "| 1 | 0 | 0  | 0      | 1        | 1   |\n",
-    "| 1 | 1 | 0  | 1      | 1        | 0   |\n",
+    "| A | B | !A | A && B | A \\|\\| B |\n",
+    "|---|---|----|--------|----------|\n",
+    "| 0 | 0 | 1  | 0      | 0        |\n",
+    "| 0 | 1 | 1  | 0      | 1        |\n",
+    "| 1 | 0 | 0  | 0      | 1        |\n",
+    "| 1 | 1 | 0  | 1      | 1        |\n",
     "\n",
     "The bitwise versions of the operations are the same, except that instead of interpreting their arguments as true or false, they operate on each bit of the argument. Thus, if A is 1010 and B is 1100, then\n",
     "\n",
@@ -102,8 +97,9 @@
     "        return out\n",
     "\n",
     "    def __eq__(self, other):\n",
-    "        \"\"\" Test equality of the alpha and beta string with those of\n",
-    "        other.  Return True or False accordingly.\n",
+    "        \"\"\" Tests equality of the alpha and beta strings with those of other. \n",
+    "        \n",
+    "        Return True or False accordingly.\n",
     "        \"\"\"\n",
     "        pass\n",
     "    \n",
@@ -114,7 +110,7 @@
     "\n",
     "        Returns the number different orbitals.\n",
     "        \n",
-    "        Try using bitwise operators to determine this.\n",
+    "        Try involving bitwise operators to determine this.\n",
     "\n",
     "        Example:\n",
     "\n",
@@ -143,6 +139,8 @@
     "    def phase(self, other):\n",
     "        \"\"\"Returns the phase between self and the other determinant.\n",
     "        \n",
+    "        Try involving bitwise operators to determine this.\n",
+    "        \n",
     "        Examples:\n",
     "        \n",
     "            Reference             Other                    Phase\n",
@@ -162,6 +160,8 @@
     "    \n",
     "    def set_subtraction(self, other):\n",
     "        \"\"\"Returns the bits that are occupied in self but not in other.\n",
+    "        \n",
+    "        Again, try to use bitwise operators to perform this.\n",
     "        \n",
     "        Example:\n",
     "        \n",
@@ -191,7 +191,38 @@
    "source": [
     "### Input\n",
     "\n",
-    "Two new options will be introduced with this programming assignment:\n",
+    "Two new options will be introduced into `input.py` with this programming assignment:\n",
+    "\n",
+    "    # 'o' frozen doubly occupied orbitals\n",
+    "    # 'a' active orbitals\n",
+    "    # 'u' frozen unoccupied orbitals\n",
+    "    #    If insufficient u's are provided append additional u's to get the \n",
+    "    #    length to the number of molecular orbitals\n",
+    "    # 'full' automatically set the active space to 'a' * nmo\n",
+    "    Settings[\"active_space\"] = 'aaaaaaa'\n",
+    "    \n",
+    "    # If 'full' perform a full CI\n",
+    "    # If an integer then is the excitation level\n",
+    "    #    (1 = CIS, 2 = CISD, 3 = CISDT, etc.)\n",
+    "    Settings[\"excitation_level\"] = 'full' \n",
+    "    \n",
+    "Here is a sample `input.py` to work from:\n",
+    "\n",
+    "    Settings = dict()\n",
+    "\n",
+    "    Settings[\"basis\"] = \"STO-3G\"\n",
+    "    Settings[\"molecule\"] = \"\"\"\n",
+    "      0 1\n",
+    "      O\n",
+    "      H 1 R\n",
+    "      H 1 R 2 A\n",
+    "      R = 0.9\n",
+    "      A = 104.5\n",
+    "      symmetry c1\n",
+    "    \"\"\"\n",
+    "    Settings[\"nalpha\"] = 5\n",
+    "    Settings[\"nbeta\"] = 5\n",
+    "    Settings[\"scf_max_iter\"] = 50\n",
     "\n",
     "    # 'o' frozen doubly occupied orbitals\n",
     "    # 'a' active orbitals\n",
@@ -207,10 +238,14 @@
     "    Settings[\"excitation_level\"] = 'full' \n",
     "    \n",
     "### Construct the reference determinant\n",
-    "    reference = Determinant( ... )\n",
+    "    reference = Determinant( alphas_string, betas_string )\n",
     "    \n",
+    "To accurately construct the strings, you'll need to know the number of $\\alpha$ and $\\beta$ electrons.\n",
+    "\n",
     "### Construct the determinant list\n",
-    "Create a list of determinants that distributes the electrons in all possible combinations within the active space up to and including the excitation level specified in the input. Include the frozen doubly occupied orbitals and the frozen unoccipied orbitals in your determinant string."
+    "Create a list of determinants that distributes the electrons in all possible combinations within the active space up to and including the excitation level specified in the input. Include the frozen doubly occupied orbitals and the frozen unoccipied orbitals in your determinant string.\n",
+    "\n",
+    "Again, to accurately construct the strings, you'll need to know the number of $\\alpha$ and $\\beta$ electrons."
    ]
   },
   {
