--- a/2020/lecture_notes/tex/4_CI.tex
+++ b/2020/lecture_notes/tex/4_CI.tex
@@ -45,10 +45,9 @@ Nevertheless, the above definition of correlation energy still stands.
 
 The most conceptually simple scheme for finding the correlation energy is known as configuration interaction (CI) theory.
 The full configuration interaction (FCI) wavefunction is a valid form for the exact wavefunction described above within a given basis.
-Thus, the corresponding FCI energy is the exact energy for that basis, and in the complete basis set limit it is the exact electronic energy.
+Thus, the corresponding FCI energy is the exact energy for that basis, and in the complete basis set (CBS) limit it is the exact electronic energy.
 By ``exact'', we mean exact w.r.t. our Hamiltonian and the time-independent Schr{\"o}dinger equation.
 Barring any relativistic effects, the FCI/CBS energy is the \textit{true} value of the energy for that molecular system.
-
 
 \section{The CI Wavefunction} 
 Recall from the first set of second quantization notes that for some molecular system with a set of spin-orbitals,
@@ -69,7 +68,7 @@ An analogous description exists for each of the other coefficients.
 The above can be simplified signficantly by pulling out the excitation operators and taking advantage of the Einstein summation convention: 
     we swap the upper and lower indice labels of the $c$'s to imply summation.
 However, to do this we need to unrestict our sums (theres no way to build-in $i <j$, etc. in the Einstein summation notation). 
-Summing over unrestricted indices for $N$ occupied indices and $N$ virtual indices introduces a redundancy of $(N!)^2$:
+Summing over unrestricted indices for $n$ occupied indices and $n$ virtual indices introduces a redundancy of $(n!)^2$:
 %\[ \ket{\Psi} = c_0 \ket{\Phi} + c_a^i \tilde{a}_{i}^{a} \ket{\Phi} + c_{ab}^{ij} \tilde{a}_{ij}^{ab} \ket{\Phi} + c_{abc}^{ijk} \tilde{a}_{ij}^{ab} \ket{\Phi} + \cdots \]
 \[ \ket{\Psi} = c_0 \ket{\Phi} + \left(\frac{1}{1!}\right)^2 \sum_{ia} c_i^a \ket{\Phi_i^a} +  \left(\frac{1}{2!}\right)^2\sum_{ \substack{ij \\ ab}} c_{ij}^{ab} \ket{\Phi_{ij}^{ab}} + \left(\frac{1}{3!}\right)^2 \sum_{ \substack{ijk \\ abc}} c_{ijk}^{abc} \ket{\Phi_{ijk}^{abc}} + \cdots \]
 \[ \ket{\Psi} = \left(c_0 + \left(\frac{1}{1!}\right)^2 c_a^i \tilde{a}_{i}^{a} +  \left(\frac{1}{2!}\right)^2c_{ab}^{ij} \tilde{a}_{ij}^{ab} + \left(\frac{1}{3!}\right)^2 c_{abc}^{ijk} \tilde{a}_{ijk}^{abc} + \cdots\right) \ket{\Phi}  \]
@@ -92,8 +91,8 @@ However one can easily retrieve the truely normalized $\ket{\Psi}$ by multiplyin
 We have a form for the wavefunction (the \textit{intermediate normalized full CI wavefunction}), as well as our $\Phi$-normal ordered Hamiltonian, 
 the \textit{correlation} Hamiltonian $\Hc$ from before:
 \[\Hc =  \sum_{pq} f_{pq} N[a_p\dg a_q]  + \frac{1}{4} \sum_{pqrs} \braket{pq || rs} N[a_p\dg a_q\dg a_s a_r] = f_p^q \tilde{a}_q^p + \frac{1}{4} \bar{g}_{pq}^{rs} \tilde{a}_{rs}^{pq} \] 
-where $f_{p}^{q} = h_{p}^{q} + \sum_i \braket{pi||qi} $,
-we are ready to derive an energy expression for the correlation energy.
+where $f_{p}^{q} = h_{p}^{q} + \sum_i \braket{pi||qi} $.
+We are ready to derive an energy expression for the correlation energy.
 
 \[\Hc \ket{\Psi} = \Ecorr \ket{\Psi} \]
 \[\Hc (1 + C_1 + C_2 + \cdots) \ket{\Phi} = \Ecorr \ket{\Psi} \]
@@ -114,14 +113,13 @@ Here we will use the fact that  $\braket{\Phi|\Hc|\Phi} = 0 $ and $\braket{\Phi|
 +  \left(\frac{1}{3!}\right)^2 c_{abc}^{ijk} \braket{\Phi | \Hc |\Phi_{ijk}^{abc}} + \cdots = \Ecorr
 \]
 
-% first term TODO add 2nd term, zeros on the first line for subsequent terms
 \[ c_a^i f_p^q \braket{\Phi| \tilde{a}_{q}^{p} \tilde{a}_{i}^{a} |\Phi} + \frac{1}{16} c_{ab}^{ij} \bar{g}_{pq}^{rs} \braket{\Phi| \tilde{a}_{rs}^{pq} \tilde{a}_{ij}^{ab} | \Phi} + 0 + \cdots = \Ecorr \]
 
 \[ c_a^i f_p^q \braket{\Phi| \tilde{a}_{q \p}^{p \h} \tilde{a}_{i \h}^{a \p} |\Phi} + 
    \frac{1}{16} c_{ab}^{ij} \bar{g}_{pq}^{rs} \hat{P}_{(r/s)}^{(p/q)} \braket{\Phi| \tilde{a}_{r \p s \p \p}^{p \h q \h \h} \tilde{a}_{i \h j \h \h}^{a \p b \p \p} | \Phi} = \Ecorr \]
 
-\[ c_a^i f_p^q \gamma_{pi} \eta_{qa} + \frac{1}{16} c_{ab}^{ij} \bar{g}_{pq}^{rs} \hat{P}_{(r/s)}^{(p/q)} \gamma_i^p \gamma_j^q \eta_r^a \eta_s^b \]
-\[ c_a^i f_p^q \gamma_{pi} \eta_{qa} + \frac{1}{16} c_{ab}^{ij}  \lp \bar{g}_{ij}^{ab} - \bar{g}_{ji}^{ab} - \bar{g}_{ij}^{ba} + \bar{g}_{ji}^{ba}  \rp\]
+\[ c_a^i f_p^q \gamma^{p}_{i} \eta_{q}^{a} + \frac{1}{16} c_{ab}^{ij} \bar{g}_{pq}^{rs} \hat{P}_{(r/s)}^{(p/q)} \gamma_i^p \gamma_j^q \eta_r^a \eta_s^b \]
+\[ c_a^i f_p^q \gamma^{p}_{i} \eta_{q}^{a} + \frac{1}{16} c_{ab}^{ij}  \lp \bar{g}_{ij}^{ab} - \bar{g}_{ji}^{ab} - \bar{g}_{ij}^{ba} + \bar{g}_{ji}^{ba}  \rp\]
 \[ f_i^a c_a^i + \frac{1}{4} \bar{g}_{ij}^{ab} c_{ab}^{ij} = \Ecorr \]
 
 where the first term is always 0 for a Hartree-Fock reference due to Brillouin's theorem. 
@@ -132,7 +130,7 @@ We arrive at the conclusion that the FCI electronic energy for a HF reference is
 \[ \frac{1}{4} \bar{g}_{ij}^{ab} c_{ab}^{ij} = \Ecorr \]
 
 \textbf{This does not mean only double excitation coefficients contribute to the energy}.
-All of the coefficients for different excitations are implicitly coupled together, their values influence each other. 
+All of the coefficients for different excitations are implicitly coupled together; their values influence each other. 
 In full-CI, this is accounted for in the matrix diagonalization.
 In truncated-CI, the task is reduced to a series of coupled equations which must be solved iteratively. 
 These topics will be explored in the exercises.
@@ -142,7 +140,7 @@ Expressed in the most simple way possible, the form of our full-CI wavefunction 
 just a linear combination of base states (excited determinants) $\Phi$.
 \[ \ket{\Psi} = \sum_i c_i \ket{\Phi_i} \]
 The problem of finding the optimal coefficients which minimize our energy to give the exact result can be found by diagonalizing the 
-matrix representation of our Hamiltonian (for a review of this, see Szabo and Ostlund, 1.3.2).
+matrix representation of our Hamiltonian in this basis of Slater determinants (for a review of this, see Szabo and Ostlund, 1.3.2).
 \[\mathbf{HC} = \mathbf{CE}\]
 where  $\mathbf{H}$ is the CI matrix, $\mathbf{C}$ is a matrix of eigenvectors, and $\mathbf{E}$ is a diagonal matrix of energy eigenvalues.
 Upon solving the above equation, one obtains a set of states and corresponding energies
@@ -150,11 +148,11 @@ Upon solving the above equation, one obtains a set of states and corresponding e
 the state with the lowest energy is the \textit{ground state}.
 
 $\mathbf{H}$ in our case is the full CI matrix, which contains every possible expectation value of our Hamiltonian 
-for two (excited) Slater determinants. 
+for two Slater determinants, which are either the reference or one of many excitations from that reference. 
 That is, it is a matrix of every expectation value you can create out of Slater determinants in the CI wavefunction expansion from before
 \[ \ket{\Psi} = c_0 \ket{\Phi} + \left(\frac{1}{1!}\right)^2 \sum_{ia} c_i^a \ket{\Phi_i^a} +  \left(\frac{1}{2!}\right)^2\sum_{ \substack{ij \\ ab}} c_{ij}^{ab} \ket{\Phi_{ij}^{ab}} + \left(\frac{1}{3!}\right)^2 \sum_{ \substack{ijk \\ abc}} c_{ijk}^{abc} \ket{\Phi_{ijk}^{abc}} + \cdots \]
 
-Typically the full CI matrix is expressed with a rather abusive notation consisting of ``excitation blocks''. 
+Typically the full CI matrix is depicted with a rather abusive notation consisting of ``excitation blocks''. 
 We write one block of the full CI matrix as, say, $\braket{\Phi_{r}^{e}|\Hc|\Phi_{ij}^{ab}}$ or $\braket{S|\Hc|D}$, and 
 by this we mean ``the block of all matrix elements consisting of singly excited determinants in the bra and doubly excited determinants in the ket.'' 
 If you were to have, say, 1,000 possible singly excited determinants and 20,000 possible doubly excited determinants,
@@ -168,10 +166,10 @@ Anyways, here it is, the full CI matrix:
  & 	\ket{\Phi} & \ket{\Phi_{i}^{a}} & \ket{\Phi_{ij}^{ab}}  &\ket{\Phi_{ijk}^{abc}} & \ket{\Phi_{ijkl}^{abcd}} & \cdots \\
 \begin{block}{c(cccccc)}
 \bra{\Phi}               & \braket{\Phi|\Hc|\Phi} &  \mathbf{0} &  \braket{\Phi|\Hc|\Phi_{ij}^{ab}} & \mathbf{0} & \mathbf{0} & \cdots  \\
-\bra{\Phi_{r}^{e}}       &   &  \braket{\Phi_{r}^{e}|\Hc|\Phi_{i}^{a}} &  \braket{\Phi_{r}^{e}|\Hc|\Phi_{ij}^{ab}} & \braket{\Phi_{r}^{e}|\Hc|\Phi_{ijk}^{abc}} & \mathbf{0} & \cdots \\
-\bra{\Phi_{rs}^{ef}}     &   &   &  \braket{\Phi_{rs}^{ef}|\Hc|\Phi_{ij}^{ab}} & \braket{\Phi_{rs}^{ef}|\Hc|\Phi_{ijk}^{abc}}  & \braket{\Phi_{rs}^{ef}|\Hc|\Phi_{ijkl}^{abcd}}  & \cdots \\
-\bra{\Phi_{rst}^{efg}}   &   &   &   & \braket{\Phi_{rst}^{efg}|\Hc|\Phi_{ijk}^{abc}} & \braket{\Phi_{rst}^{efg}|\Hc|\Phi_{ijkl}^{abcd}}  & \cdots \\
-\bra{\Phi_{rstu}^{efgh}} &   &   &   &   &  \braket{\Phi_{rstu}^{efgh}|\Hc|\Phi_{ijkl}^{abcd}}  & \cdots \\
+\bra{\Phi_{m}^{e}}       &   &  \braket{\Phi_{m}^{e}|\Hc|\Phi_{i}^{a}} &  \braket{\Phi_{m}^{e}|\Hc|\Phi_{ij}^{ab}} & \braket{\Phi_{m}^{e}|\Hc|\Phi_{ijk}^{abc}} & \mathbf{0} & \cdots \\
+\bra{\Phi_{mn}^{ef}}     &   &   &  \braket{\Phi_{mn}^{ef}|\Hc|\Phi_{ij}^{ab}} & \braket{\Phi_{mn}^{ef}|\Hc|\Phi_{ijk}^{abc}}  & \braket{\Phi_{mn}^{ef}|\Hc|\Phi_{ijkl}^{abcd}}  & \cdots \\
+\bra{\Phi_{mno}^{efg}}   &   &   &   & \braket{\Phi_{mno}^{efg}|\Hc|\Phi_{ijk}^{abc}} & \braket{\Phi_{mno}^{efg}|\Hc|\Phi_{ijkl}^{abcd}}  & \cdots \\
+\bra{\Phi_{mnop}^{efgh}} &   &   &   &   &  \braket{\Phi_{mnop}^{efgh}|\Hc|\Phi_{ijkl}^{abcd}}  & \cdots \\
 \vdots                   &   &   &   &   &   & \ddots \\
 \end{block}
 \end{blockarray}
@@ -182,40 +180,100 @@ With the exception of $\braket{\Phi|\Hc|\Phi}$, each entry in the matrix above \
 Above, we have only filled in the upper triangle since it is a symmetric matrix. 
 Futhermore, some entries are all 0's since excitations between determinants differing by more than two excitations must be 0 (Slater's rules).
 % TODO check if this is bullshit:
-Anyways, you just diagonalize that bad boy and the lowest eigenvalue is your full-CI energy. 
-You don't even have to use the energy expression we derived earlier (that's only used direcly for truncated CI).
-You \textit{could} extract out 
+Anyways, you just diagonalize that bad boy and the lowest eigenvalue is your full-CI 
+    correlation energy for the ground state. 
+You don't even have to use the energy expression we derived earlier (that's only used directly for truncated CI).
+You \textit{could} extract out the resulting doubles coefficients $c_{ab}^{ij}$, 
+contract them with $\bar{g}_{ij}^{ab}$ and multiply by $\frac{1}{4}$ to get the correlation energy,
+but there's no need.
+
+\section{Truncated CI}
+Full-CI is really expensive, and kind of overkill; do you \textit{really} need to include
+septuple excitations in your wavefunction? Is this a probable physical occurance?
+That 7 electrons would want to simultaneously be away from their ever-so-comfy reference state orbitals
+in favor of virtual ones? Almost certainly not.
+So, a reasonable approach is to truncate the level of excitations to some maximum amount.
+This would reduce the number of determinants we need to consider, and reduce the cost of the method.
+Furthermore, we could develop a hierarchy of methods which systematically approach the exact FCI result, 
+and get close enough to it without the hefty cost of FCI. (CISD, CISDT, CISDTQ, CISDTQP, CISDTQPH, ...)
+
+There's one small price to pay by doing this: we lose the \textit{size consistency} property of the FCI wavefunction.
+More on that later.
+
+\subsection{CID}
+Our energy expression for the CI energy for a HF reference determinant, 
+    regardless of excitations we choose to include in the wavefunction, is
+\[ \frac{1}{4} \bar{g}_{ij}^{ab} c_{ab}^{ij} = \Ecorr \]
+So, the main task is to solve for the double excitation coefficients $c_{ab}^{ij}$.
+However, the double excitation coefficient values are implicitly influenced by the values of all other  
+    excitation coefficients (see exercises).
+In the CID approximation, this influence is neglected, and we only consider doubly excited determinants.
+\[\Psi = (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd}) \Phi \]
+\[\Hc \Psi = E \Psi\]
+
+Projecting each side of the CI doubles Schrodinger equation by $\Phi$ and $\Phi_{ij}^{ab}$ gives a system of equations 
+which can be used for solving the CID energy.
+Projection by $\Phi$:
+\[\braket{\Phi |\Hc (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd})| \Phi} = \Ecorr \]
+\[ \frac{1}{4} \braket{\Phi |\Hc|\Phi_{kl}^{cd}} c_{cd}^{kl} = \Ecorr \]
+We have already solved this equation before,
+\[ \frac{1}{4} \bar{g}_{ij}^{ab} c_{ab}^{ij} = \Ecorr \]
+where we have left out the $f_i^a c_a^i$ since it is zero for a HF reference.
+
+Projection by $\Phi_{ij}^{ab}$
+\[\braket{\Phi_{ij}^{ab} |\Hc (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd})| \Phi} = \Ecorr \braket{\Phi_{ij}^{ab}| (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd}) | \Phi} \]
+\[\braket{\Phi_{ij}^{ab} |\Hc (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd})| \Phi} 
+          =  \Ecorr \frac{1}{4} c_{cd}^{kl} \braket{\Phi| \hat{P}_{(a/b)}^{(i/j)} \tilde{a}_{a \p b \p \p}^{i \h j \h \h}  \tilde{a}_{k \h l \h \h}^{c \p d \p \p} | \Phi} \]
+\[\braket{\Phi_{ij}^{ab} |\Hc (1 + \frac{1}{4} c_{cd}^{kl} \tilde{a}_{kl}^{cd})| \Phi} 
+          =  \Ecorr c_{cd}^{kl} \]
+\[\braket{\Phi_{ij}^{ab} |\Hc | \Phi } + \frac{1}{4} \braket{\Phi_{ij}^{ab}| \Hc | \Phi_{kl}^{cd}} c_{cd}^{kl}
+          =  \Ecorr c_{ab}^{ij} \]
 
 
-% Brillouins: ground electronic states from one-particle methods arlready mply configuration interaction of the ground state configuration with singly excited ones.
-% furhter inclusion redundant
+Simplifying the above equation should yield the following expression for the
+CID coefficients 
+\[  \Ecorr c_{ab}^{ij} = \bar{g}_{ab}^{ij} + \hat{P}_{(a/b)} f_a^c c_{cb}^{ij} - \hat{P}^{(i/j)} f_k^i c_{ab}^{kj}
+ + \frac{1}{2} \bar{g}_{ab}^{cd} c_{cd}^{ij} + \frac{1}{2} \bar{g}_{kl}^{ij} c_{ab}^{kl} +
+  \hat{P}^{(i/j)}_{(a/b)} \bar{g}_{ak}^{ic} c_{bc}^{jk}
+\]
+This is left as an exercise. 
+Note the coefficients depend on themselves, so they must be solved iteratively,
+much like how our MO coefficients/density matrix needed to be iteratively solved in HF.
 
-% Contract first term explicitly, third and higher terms are 0 because of no complete contractions
-% Equivalently,  0 because of 4th Slater rule, which is the same as saying the wick expansion has no complete contractions 
+\section{Size Consistency}
+A quantum chemistry method is said to be \textit{size consistent} if the obtained energy of non-interacting systems
+is the same result as summing the individual energies of the non-interacting systems separately.
+So if you have two systems $A$ and $B$, 
+\[E(A,B) = E(A) + E(B) \]
+Practically, if you were to do a HF computation on two atoms separated by 100 Angstroms, and then two HF computations on each atom indiviudally, 
+the sum of the latter two energies would be the same as the original energy of the combined system.
+So, we say that HF is \textit{size consistent}.
+Truncated CI, such as CID, is not size consistent.
+The CID energy of combined noninteracting systems (say, two monomers) is not the same as the sum of the individual CID energies of the two monomers.
+Why? The CID wavefunctions of each of the monomers contains double excitations within the monomer.
+The CID wavefunction of the combined system contains double excitations of just the combined system,
+and completely ignores the possibility that both monomers are doubly excited simultaneously; this would be a quadruple excitation.
+Hence, CID, and all truncated CI, have a similar manifestation of this issue.
+Anyone who knows what they're doing will always include an additive correction to their CI energy (CISD, MRCISD, etc)
+    to help fix the size consistency issue.
+The most common of these corrections is the Davidson correction,
+    which is unfortunately denoted with a ``+Q'' notation (CISD+Q, MRCISD+Q), not to be confused with quadruple excitations.
 
 
-%\left(\frac{1}{1!}\right)^2 c_a^i \tilde{a}_{i}^{a} 
-%\left(\frac{1}{2!}\right)^2c_{ab}^{ij} \tilde{a}_{ij}^{ab}
-%\left(\frac{1}{3!}\right)^2 c_{abc}^{ijk} \tilde{a}_{ijk}^{abc}
-%
-%\[ \braket{\Phi | \Hc C_1 | \Phi} + \braket{\Phi | \Hc C_2 | \Phi} + \braket{\Phi | \Hc C_3 | \Phi} + \cdots \]
-%
-%
-%\[\braket{\Phi | \Hc (C_1 + C_2 + \cdots) | \Phi} = \Ecorr \]
-%
 
 
-%intermediate normalization
-
-CI is conceptually very simple: Diagonalize the matrix representation of the $N$-electron Hamiltonian in a basis of all possible Slater determinants constructable from your basis set.
-
-There are a lot of linear combinations and basis expansions going on here. So let's set that straight right now:
+\subsection{Epilogue}
+There are many layers of complexity which we keep burying deeper and deeper into the ground, so it might be good to review the story so far. 
 
 \textbf{For a given molecular system},
 \begin{itemize}
 \item Our spin-orbitals are constructed from a linear combination of atomic orbitals (LCAO), which are \textit{fixed, known} one-electron functions (typically Gaussians). 
 The spin-orbitals are typically optimized with an LCAO-HF procedure, such as the Roothaan-Hall or Pople-Nesbet approaches. 
-\item There is a finite set of Slater determinants one can construct given a finite set of spin-orbitals. This set of Slater determinants form a \textit{basis} for representing our $N$-electron wavefunction.
+\item There is a finite set of Slater determinants (linear combinations of products of spin-orbitals) one can construct given a finite set of spin-orbitals. This set of Slater determinants form a \textit{basis} for representing our $N$-electron wavefunction.
+\item The CI wavefunction is a linear combination of all possible Slater determinants which may be constructed from a set of spin-orbitals. These Slater determinants
+can be expressed w.r.t. excitations from a reference determinant, which is almost always the HF wavefunction. 
+\item The set of CI coefficients in the CI wavefunction which minimize the energy can be found by diagonalizing the matrix representation of the Hamiltonian in this basis 
+of Slater determinants. 
 \end{itemize}
 
 \textbf{Why} do the excitations from the reference determinant (which is almost always the HF wavefunction, but need not be) in the CI expansion account for electron correlation?
@@ -230,51 +288,16 @@ By mixing in all those possible determinants, or ``excited states'', you allow t
     whereas before in the Hartree-Fock picture they were clamped down into one Slater determinant configuration. 
 In the limit of an infinite basis, we are allowing infinite flexibility for electrons to occupy different orbitals, which is equivalent to perfectly describing electron correlation.
 
-If you're not buying the qualitative picture, consider the following philosophical-like argument:
-\begin{itemize}
-\item 1: The Hartree-Fock wavefunction does not account for electron correlation
-\item 2: The exact $N$-electron wavefunction does account for electron correlation 
-\item 2: The exact $N$-electron wavefunction can be represented as a linear combination of Slater determinant wavefunctions (this is proven in 1st set of second quantization notes)
-\item 3: Each Slater determinant in the above linear combination can be expressed with respect to some arbitrary reference determinant using creation and annihilation operators
-\item 4: We can choose the reference determinant in our expansion to be the Hartree-Fock wavefunction 
-\item 5: Expanding all excitations of our Hartree-Fock wavefunction constructs the exact $N$-electron wavefunction 
-\item 6: The exact $N$-electron wavefunction  Expanding all excitations of our Hartree-Fock wavefunction constructs the exact $N$-electron wavefunction 
-
-
-\item 1: The Hartree-Fock wavefunction does not account for electron correlation
-\item 2: The exact $N$-electron wavefunction fully accounts for electron correlation
-\item 3: The exact $N$-electron wavefunction can be expressed as a linear combination of excitations from the Hartree-Fock reference determinant 
-% includes all excitations from some reference determinant 
-\item C: Excitations from the reference determinant account for electron corrleation
-
-
-\item 1: The exact $N$-electron wavefunction can be represented as a linear combination of Slater determinant wavefunctions (this is proven in 1st set of second quantization notes)
-\[ \ket{\Psi} = \sum_{p_1 < \cdots < p_N} c_p \ket{\Phi_{p_1 \cdots p_N}} \]
-\item 2: Each Slater determinant in the above linear combination can be expressed with respect to some arbitrary reference determinant using creation and annihilation operators
-\item 3: We can freely choose the reference determinant in our expansion to be the Hartree-Fock wavefunction 
-\item 4: The Hartree-Fock wavefunction does not fully account for electron correlation
-
-Conclusion: 
-
-The exact $N$-electron wavefunction in a given basis is, well, \textit{exact}, it must perfectly describe all electron correlation effects.
-Since this exact wavefunction can be expressed in terms of excitations from the Hartree-Fock reference determinant, it follows that those excitation terms are accounting for electron correlation.
-
-\end{itemize}
-
-  we obtain electron correlation 
-
-
-\section{Interesting Conceptual Tidbits}
-For a Hartree-Fock/STO-3G computation on \textit{just the Hydrogen atom}, the Hartree-Fock wavefunction \textbf{is the full-CI wavefunction} for that basis set, 
-    because there is only \textbf{one basis function}, thus there is only \textbf{one possible Slater determinant} you can even form.
-
-What about Hartree-Fock/CBS, the \textit{complete basis set limit} for Hartree-Fock, performed on \textit{just the Hydrogen atom}?
-Well, this
-
-
-the Hartree-Fock limit, which is the Hartree-Fock energy at the complete basis set limit, 
-
-A complete basis of spin-orbitals will in turn allow a complete basis of Slater determinants.
+%For a Hartree-Fock/STO-3G computation on \textit{just the Hydrogen atom}, the Hartree-Fock wavefunction \textbf{is the full-CI wavefunction} for that basis set, 
+%    because there is only \textbf{one basis function}, thus there is only \textbf{one possible Slater determinant} you can even form.
+%
+%What about Hartree-Fock/CBS, the \textit{complete basis set limit} for Hartree-Fock, performed on \textit{just the Hydrogen atom}?
+%Well, this
+%
+%
+%the Hartree-Fock limit, which is the Hartree-Fock energy at the complete basis set limit, 
+%
+%A complete basis of spin-orbitals will in turn allow a complete basis of Slater determinants.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
